--- a/AmazonTranslateTradosPlugin/Sdl - Backup.Community.AmazonTranslateTradosPlugin.csproj
+++ b/AmazonTranslateTradosPlugin/Sdl - Backup.Community.AmazonTranslateTradosPlugin.csproj
@@ -6,13 +6,9 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
 		<UseWPF>true</UseWPF>
-		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta</TradosFolder>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18Beta\Plugins</PluginDeploymentPath>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <None Remove="Resources\Information.png" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<Reference Include="Newtonsoft.Json">
@@ -32,7 +28,7 @@
 			<HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.Platform.Styles">
-		  <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
+		  <HintPath>.$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.Core">
 			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.Core.dll</HintPath>
@@ -44,10 +40,10 @@
 			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.TranslationMemoryApi.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.Core">
-		  <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
+		  <HintPath>.$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.FileBased">
-		  <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
+		  <HintPath>.$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.TellMe.ProviderApi">
 			<HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
@@ -79,7 +75,6 @@
 		<None Include="Resources\Download.ico" />
 		<Resource Include="Resources\amazon-aws-small.jpg" />
 		<Resource Include="Resources\amazon-aws-main.jpg" />
-		<Resource Include="Resources\Information.png" />
 		<Content Include="pluginpackage.manifest.xml">
 			<SubType>Designer</SubType>
 		</Content>
