--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ TMX_TranslationProvider/TMX_TranslationProviderWithUITest.sln
 /memoQ TM Provider/_bin/ru/memoQPlugin.resources.dll
 /memoQ TM Provider/_bin/TMProvider.dll
 /memoQ TM Provider/_bin/zh-Hans/memoQPlugin.resources.dll
+/Jobs/Sdl.Community.Jobs/Properties/launchSettings.json
