--- a/Time Tracker/Sdl.Community.Studio.Time.Tracker.csproj
+++ b/Time Tracker/Sdl.Community.Studio.Time.Tracker.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,7 +38,8 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
+    <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18Beta\Plugins</PluginDeploymentPath>
+    <TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18Beta</TradosFolder>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,29 +65,33 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DocumentFormat.OpenXml">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\DocumentFormat.OpenXml.dll</HintPath>
+      <HintPath>$(TradosFolder)\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Desktop.IntegrationApi.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Sdl.Desktop.Platform.Styles, Version=18.0.0.0, Culture=neutral, PublicKeyToken=c28cdb26c445c888, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio18Beta\Sdl.Desktop.Platform.Styles.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.ProjectAutomation.Core">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.ProjectAutomation.Core.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.ProjectAutomation.FileBased">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.ProjectAutomation.FileBased.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
     </Reference>
     <Reference Include="Studio.Time.Tracker.ObjectListView, Version=2.7.0.33772, Culture=neutral, PublicKeyToken=b1c5bf581481bcd4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ThirdParty\objectListView\Studio.Time.Tracker.ObjectListView.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.TellMe.ProviderApi">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.TellMe.ProviderApi.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -101,10 +106,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TellMe\AppStoreDownloadAction.cs" />
-    <Compile Include="TellMe\AppStoreForumAction.cs" />
-    <Compile Include="TellMe\CommunityWikiAction.cs" />
+    <Compile Include="Constants.cs" />
+    <Compile Include="TellMe\CommunityForumAction.cs" />
+    <Compile Include="TellMe\DocumentationAction.cs" />
+    <Compile Include="TellMe\NewActivityAction.cs" />
+    <Compile Include="TellMe\NewTrackerAction.cs" />
+    <Compile Include="TellMe\SettingsAction.cs" />
+    <Compile Include="TellMe\SourceCodeAction.cs" />
+    <Compile Include="TellMe\TellMeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
+    <Compile Include="TellMe\TimeTrackerAction.cs" />
     <Compile Include="Tracking\Tracked.cs" />
     <Compile Include="Custom\ComboboxItem.cs" />
     <Compile Include="Dialogs\ExportActivitesToExcel.cs">
@@ -236,11 +247,8 @@
     <Content Include="Resources\Button-Pause-yellow.ico" />
     <Content Include="Resources\Button-Stop-blue.ico" />
     <Content Include="Resources\Chart-Bar-Document.ico" />
-    <Content Include="Resources\Download.ico" />
     <Content Include="Resources\Excel.ico" />
-    <Content Include="Resources\ForumIcon.ico" />
     <Content Include="Resources\Ms-Excel.ico" />
-    <Content Include="Resources\Question.ico" />
     <Content Include="Resources\StartTimer.ico" />
     <Content Include="Resources\StopTimer.ico" />
     <Content Include="Resources\Book-Add.ico" />
@@ -263,6 +271,10 @@
     <Content Include="Resources\Sandclock.ico" />
     <Content Include="Resources\Settings.ico" />
     <Content Include="Resources\SymbolAdd.ico" />
+    <None Include="Resources\TellMe_Documentation.ico" />
+    <None Include="Resources\TellMe_Forum.ico" />
+    <None Include="Resources\TellMe_Settings.ico" />
+    <None Include="Resources\TellMe_SourceCode.ico" />
     <Content Include="Resources\Timer.ico" />
     <Content Include="Resources\Timetable.ico" />
     <Content Include="Resources\Users-simple.ico" />
@@ -308,7 +320,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PluginResources.resx">
       <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <Content Include="pluginpackage.manifest.xml">
@@ -359,7 +371,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup>
