--- a/Multilingual.Excel.FileType/Multilingual.Excel.FileType/Multilingual.Excel.FileType.csproj
+++ b/Multilingual.Excel.FileType/Multilingual.Excel.FileType/Multilingual.Excel.FileType.csproj
@@ -25,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac">
@@ -64,6 +66,9 @@
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
       <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="Sdl.Desktop.Platform.Styles">
+      <HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.FileTypeSupport.Framework.Core">
       <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
@@ -314,10 +319,14 @@
     <Compile Include="FileType\ViewModels\LanguageMappingViewModel.cs" />
     <Compile Include="Services\XmlReaderFactory.cs" />
     <Compile Include="Constants\XmlConstants.cs" />
-    <Compile Include="TellMe\CommunityAppStoreAction.cs" />
     <Compile Include="TellMe\CommunityAppStoreForumAction.cs" />
     <Compile Include="TellMe\CommunityWikiAction.cs" />
+    <Compile Include="TellMe\SettingsAction.cs" />
+    <Compile Include="TellMe\SourceCodeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
+    <Compile Include="TellMe\WarningWindow\SettingsActionWarning.xaml.cs">
+      <DependentUpon>SettingsActionWarning.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Verifier\MessageUI\MultilingualExcelMessageData.cs" />
     <Compile Include="Verifier\MultilingualExcelVerifier.cs" />
     <Compile Include="Verifier\MultilingualExcelVerifierLanguage.cs" />
@@ -358,6 +367,17 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="pluginpackage.manifest.xml" />
+    <Resource Include="Resources\TellMe\TellMeAppStoreForum.ico" />
+    <Resource Include="Resources\TellMe\TellMeDocumentation.ico" />
+    <Resource Include="Resources\TellMe\TellMeDocumentation.png" />
+    <Resource Include="Resources\TellMe\TellMeForum.ico" />
+    <Resource Include="Resources\TellMe\TellMeSettings.ico" />
+    <Resource Include="Resources\TellMe\TellMeSourceCode.ico" />
+    <Resource Include="Resources\information-48.png" />
+    <Content Include="Resources\Settings.ico" />
+    <Content Include="Resources\SourceCode.ico" />
+    <Content Include="Resources\TellmeDocumentation.ico" />
+    <Resource Include="Resources\Warning2.png" />
     <Resource Include="Resources\Download.ico" />
     <Resource Include="Resources\ForumIcon.ico" />
     <Resource Include="Resources\Question.ico" />
@@ -516,6 +536,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\WindowsBorder.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TellMe\WarningWindow\SettingsActionWarning.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
